crates/toml/tests/snapshots/invalid/array/double-comma-02.stderr
TOML parse error at line 1, column 24
  |
1 | double-comma-02 = [1,2,,]
  |                        ^
extra comma in array, expected value
